# PicToWebP

./: .gitignore  LICENSE  README.md  convert.py  convert_to_webp.py  requirements.txt
src/: app.py  constants.py  convert.py  enums.py  exceptions.py  logging_config.py  utils.py
src/templates/: index.html
src_rust/: Cargo.toml
src_rust/src/: main.rs  utils.rs
