[package]
name = "src_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24.7"
indicatif = "0.17.7"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.8.0"
thiserror = "1.0"
walkdir = "2.4.0"
webp = "0.2.6"
